--- a/app/src/main/res/layout/fragment_list_hotel.xml
+++ b/app/src/main/res/layout/fragment_list_hotel.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="140dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/FrameItemHotel"
     android:layout_margin="8dp">
 
     <androidx.cardview.widget.CardView
