--- a/app/src/main/res/layout/activity_detail_hotel.xml
+++ b/app/src/main/res/layout/activity_detail_hotel.xml
@@ -32,7 +32,6 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-
                 <TextView
                     android:id="@+id/tv_Hotelname4"
                     android:layout_width="wrap_content"
@@ -94,9 +93,6 @@
                     app:layout_constraintStart_toStartOf="@+id/textView4"
                     app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
-
-
-
                 <Button
                     android:id="@+id/btn_reserve2"
                     android:layout_width="wrap_content"
@@ -113,14 +109,14 @@
                     android:layout_width="60dp"
                     android:layout_height="60dp"
                     android:layout_marginTop="40dp"
-                    android:layout_marginBottom="45dp"
+                    android:layout_marginBottom="5dp"
                     android:scaleType="fitXY"
+                    android:src="@drawable/favorite4"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/btn_reserve2"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView3"
-                    android:src="@drawable/favorite4"/>
+                    app:layout_constraintTop_toBottomOf="@+id/textViewRooms" />
 
                 <TextView
                     android:id="@+id/tv_owner_name"
@@ -190,12 +186,47 @@
                     app:layout_constraintStart_toStartOf="@+id/tv_owner_phone"
                     app:layout_constraintTop_toTopOf="@+id/textView3" />
 
+                <TextView
+                    android:id="@+id/textViewRooms"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="30dp"
+                    android:layout_marginTop="40dp"
+                    android:text="Rooms"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+                <TextView
+                    android:id="@+id/textViewMoreRoom"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="More"
+                    android:textColor="#219bcc"
+                    app:layout_constraintBottom_toBottomOf="@+id/textViewRooms"
+                    app:layout_constraintEnd_toEndOf="@+id/tv_dayWork4"
+                    app:layout_constraintStart_toStartOf="@+id/tv_dayWork4"
+                    app:layout_constraintTop_toTopOf="@+id/textViewRooms" />
+
                 <androidx.constraintlayout.widget.Guideline
                     android:id="@+id/guideline2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     app:layout_constraintGuide_percent="0.27" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/RCrooms"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="20dp"
+                    app:layout_constraintBottom_toTopOf="@+id/img_btn_like2"
+                    app:layout_constraintEnd_toEndOf="@+id/textViewMoreRoom"
+                    app:layout_constraintHorizontal_bias="0.515"
+                    app:layout_constraintStart_toStartOf="@+id/textViewRooms"
+                    app:layout_constraintTop_toBottomOf="@+id/textViewRooms"
+                    app:layout_constraintVertical_bias="1.0" />
+
                 <!--    </androidx.cardview.widget.CardView>-->
 
             </androidx.constraintlayout.widget.ConstraintLayout>
