--- a/app/src/main/res/layout/fragment_list_room.xml
+++ b/app/src/main/res/layout/fragment_list_room.xml
@@ -63,7 +63,7 @@
                 android:textSize="16sp" />
 
             <TextView
-                android:id="@+id/tvLocation"
+                android:id="@+id/tvPeople"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tvHotelPrice_Period"
@@ -73,6 +73,17 @@
                 android:drawableLeft="@drawable/people"
                 android:text="soNguoi"
                 android:textSize="15sp" />
+
+            <Button
+                android:id="@+id/btnBook"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentBottom="true"
+                android:text="Book"
+                />
 
         </RelativeLayout>
 
