--- a/app/src/main/res/layout/activity_detail_hotel.xml
+++ b/app/src/main/res/layout/activity_detail_hotel.xml
@@ -1,10 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
 
+    <RelativeLayout
+        android:id="@+id/FrameAppbar"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:background="#0088FF">
+
+        <ImageButton
+            android:id="@+id/btnBack"
+            android:layout_centerVertical="true"
+            android:layout_marginHorizontal="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_baseline_arrow_back_24"/>
+
+        <TextView
+            android:layout_toRightOf="@id/btnBack"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:textColor="#fff"
+            android:textSize="25dp"
+            android:layout_marginLeft="10dp"
+            android:text="Chi tiết khách sạn"/>
+    </RelativeLayout>
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -34,9 +59,9 @@
 
                 <TextView
                     android:id="@+id/tv_Hotelname4"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="30dp"
+                    android:layout_marginHorizontal="30dp"
                     android:layout_marginTop="30dp"
                     android:text="Al_Qasem Hotel"
                     android:textColor="#000000"
@@ -46,9 +71,9 @@
 
                 <TextView
                     android:id="@+id/tv_location4"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="30dp"
+                    android:layout_marginHorizontal="30dp"
                     android:layout_marginTop="15dp"
                     android:drawableLeft="@drawable/location"
                     android:text="Beit Lahia"
@@ -73,14 +98,15 @@
                     android:id="@+id/textView4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="25dp"
                     android:layout_marginStart="30dp"
-                    android:layout_marginTop="150dp"
                     android:text="Price"
                     android:textSize="16sp"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_location4" />
+                    app:layout_constraintTop_toBottomOf="@+id/tv_description" />
 
                 <TextView
+
                     android:id="@+id/tv_price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -88,35 +114,10 @@
                     android:text="20"
                     android:textColor="@color/black"
                     android:textSize="18sp"
-                    android:drawableLeft="@drawable/mony"
+                    android:gravity="center"
                     app:layout_constraintEnd_toEndOf="@+id/textView4"
                     app:layout_constraintStart_toStartOf="@+id/textView4"
                     app:layout_constraintTop_toBottomOf="@+id/textView4" />
-
-                <Button
-                    android:id="@+id/btn_reserve2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Reserve Now"
-                    app:layout_constraintBottom_toBottomOf="@+id/img_btn_like2"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintStart_toEndOf="@+id/img_btn_like2"
-                    app:layout_constraintTop_toTopOf="@+id/img_btn_like2" />
-
-                <ImageButton
-                    android:id="@+id/img_btn_like2"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:layout_marginTop="40dp"
-                    android:layout_marginBottom="5dp"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/favorite4"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/btn_reserve2"
-                    app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textViewRooms" />
 
                 <TextView
                     android:id="@+id/tv_owner_name"
@@ -212,20 +213,18 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    app:layout_constraintGuide_percent="0.27" />
+                    app:layout_constraintGuide_percent="0.15" />
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/RCrooms"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="20dp"
-                    app:layout_constraintBottom_toTopOf="@+id/img_btn_like2"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="@+id/textViewMoreRoom"
-                    app:layout_constraintHorizontal_bias="0.515"
+                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="@+id/textViewRooms"
                     app:layout_constraintTop_toBottomOf="@+id/textViewRooms"
-                    app:layout_constraintVertical_bias="1.0" />
+                    app:layout_constraintVertical_bias="0.149" />
 
                 <!--    </androidx.cardview.widget.CardView>-->
 
@@ -234,4 +233,6 @@
     </ScrollView>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+</LinearLayout>
