--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -55,16 +55,29 @@
         android:inputType="number"
         />
 
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:gravity="center"
 
+    >
     <Button
         android:id="@+id/btn_Search"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Search"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_gravity="center"
-        app:layout_constraintTop_toBottomOf="@+id/spinner_search_country" />
+        android:layout_gravity="center" />
+    <Button
+        android:id="@+id/btn_Cancel"
+        android:layout_toRightOf="@id/btn_Search"
+        android:layout_marginLeft="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Cancel"
+        android:backgroundTint="#eee"
+        android:textColor="#000"
+        android:layout_gravity="center"/>
+</RelativeLayout>
 
     <FrameLayout
         android:id="@+id/fragmentContainer2"
