--- a/app/src/main/res/layout/fragment_list_room.xml
+++ b/app/src/main/res/layout/fragment_list_room.xml
@@ -25,11 +25,11 @@
 
             <ImageView
                 android:layout_marginLeft="5dp"
-                android:id="@+id/imgHotel1"
+                android:id="@+id/imgRoom"
                 android:layout_width="130dp"
                 android:layout_height="match_parent"
                 android:scaleType="fitCenter"
-                android:src="@drawable/hotel1"/>
+                />
         </androidx.cardview.widget.CardView>
 
         <RelativeLayout
@@ -57,7 +57,6 @@
                 android:layout_alignParentStart="true"
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="10dp"
-                android:drawableLeft="@drawable/mony"
                 android:text="pricePeriod"
                 android:textColor="#0D32FF"
                 android:textSize="16sp" />
